Fixed triangulation, added things 🌼

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
   },
   "rules": {
     "no-var": "error",
-    "prefer-const": "error"
+    "prefer-const": "error",
+    "no-prototype-builtins": "warn"
   },
   "globals": {
     "earcut": "readonly"
